recursion.cons.nfirst.Nfirst.scala.error
Erreur de compilation :
Nfirst:18: error: too many arguments for method nfirst: (l: List[Int], n: Int)List[Int]
  return nfirst(l, n, 0);
               ^